# cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: GitVersion.cmake  RPPROJECTNAMEConfig.cmake  genVersionFiles.cmake  projectConfig.cmake
cmake/cpack/: package.cmake
cmake/templates/: Doxyfile.in  version.h.in
doc/: DoxygenLayout.xml
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tools/: generate_cpack.sh
